src/test/custom/valid/switch/switchComplex.wacc
# a switch statement with complex expr

# Output:
# You got 1!
# c is 7
# You got 0!
# 1
# You got 0!
# 1
# You got bigger than 2!
# c is 7

# Program:

begin
  int[] a = [1, 0, 0, 1];
  int[] b = [4, 3, 2, 1];
  for (int i = 0; i < len(a); i = i + 1) do
    switch a[i] * b[len(a) - i - 1] do
      case 0
        int a = 1;
        println "You got 0!";
        println a;
        continue
      case 1
        println "You got 1!";
        break
      case 2
        println "You got 2!";
        break
      default
        println "You got bigger than 2!"
    done;
    int c = 7;
    print "c is ";
    println c
  done
end