src/test/custom/invalid/jump/multipleJump.wacc
# multiple breaks within loop/switch statement

# Output:
# #semantic error#

# Program:

begin
  int[] a = [1, 0, 0, 1];
  int[] b = [4, 3, 2, 1];
  for (int i = 0; i < len(a); i = i + 1) do
    switch a[i] * b[len(a) - i - 1] do
      case 0
        println "You got 0!";
        continue;
        continue;
        continue;
        continue
      case 1
        println "You got 1!";
        break;
        break;
        break;
        break
      case 2
        println "You got 2!";
        break;
        break;
        break
      default
        println "You got bigger than 2!";
        break;
        break
    done;
    println i
  done;

  for (int i = 0; i < 10; i = i + 1) do
    if i % 2 == 0 then
      continue;
      continue;
      continue
    else
      skip
    fi
  done;

  int i = 0;
  while i < 100 do
    if i == 50 then
      break;
      break;
      break
    else
      i = i + 1
    fi
  done
end